2011-05-13  Vladimir Serbinenko  <phcoder@gmail.com>

	Flush caches on DMA memory.

	* grub-core/kern/mips/cache.S (grub_arch_sync_dma_caches): New function.
	* grub-core/bus/pci.c (grub_memalign_dma32): Flush caches.
	(grub_dma_free): Likewise.
	* include/grub/cache.h (grub_arch_sync_dma_caches): New declaration.

2011-05-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/boot/mips/yeeloong/fwstart.S: Add explicit set mips3
	to avoid asm treating ld and sd as macros.

2011-05-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/boot/mips/startup_raw.S: Flush cache after loading
	decompressor.

2011-05-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/boot/mips/startup_raw.S: Use jalr rather than bal to call
	grub_decompress_core since later would fail if grub_decompress_core
	is too far.

2011-05-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/mips/dl.c (grub_arch_dl_relocate_symbols): Handle
	R_MIPS_JALR since it's used by newer compiler.

2011-05-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub.d/10_linux.in: Correctly handle the Linux in root.

2011-05-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/efi/chainloader.c (grub_chainloader_unload): Set
	file_path to 0 for surety.
	(grub_chainloader_boot): Set exit_data to NULL.
	Unset the loader once done.
	(grub_cmd_chainloader): Fix confusing error message if file is empty.

2011-05-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/at_keyboard.c (fetch_key): Make a printf on
	unknown key into a dprintf.

2011-05-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/hostdisk.c (linux_find_partition): Don't abort
	on first non-existant partition.

2011-05-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/hostdisk.c (open_device): Set data->fd to -1 if
	openning fails.
	Reported by: Mark Korenberg.

2011-05-09  Vladimir Serbinenko  <phcoder@gmail.com>
