@@ -1169,20 +1169,20 @@ generate_image (const char *dir, char *prefix, FILE *out, char *mods[],
       char *boot_path, *boot_img;
       size_t boot_size;
       grub_uint8_t context[GRUB_MD_SHA512->contextsize];
-      /* fwstart.img is the only part which can't be testes by using *-elf
+      /* fwstart.img is the only part which can't be tested by using *-elf
 	 target. Check it against the checksum. This checksum is obtained with
 	 sha512sum utility after compiling on Gnewsense.
       */
       const grub_uint8_t fwstart_good_hash[] = 
 	{ 
-	  0x9f, 0x7f, 0x79, 0x47, 0x68, 0x91, 0x61, 0xb3,
-	  0x16, 0x7b, 0xf0, 0x27, 0x1c, 0xf7, 0xaf, 0x05,
-	  0x6c, 0xc1, 0x6f, 0xd2, 0xe7, 0xd1, 0xe9, 0xec,
-	  0x08, 0x87, 0xe5, 0xc8, 0x29, 0xa2, 0x5b, 0x84,
-	  0xf8, 0xa6, 0xec, 0x08, 0xf7, 0xcb, 0x7b, 0x6c,
-	  0xfe, 0x01, 0xfd, 0x5d, 0xba, 0xbf, 0x0d, 0x0f,
-	  0x2e, 0xef, 0xed, 0x7b, 0xfe, 0xc9, 0x4a, 0x85,
-	  0xcf, 0xac, 0x20, 0xd7, 0x01, 0xc5, 0xc5, 0x9c 
+	  0x44, 0xce, 0xbc, 0xe7, 0xc2, 0x5e, 0xff, 0x65,
+	  0xc5, 0xda, 0x29, 0x5a, 0xb9, 0x08, 0x89, 0x42,
+	  0x83, 0x3f, 0x2b, 0x2e, 0x06, 0xe1, 0x6f, 0x79,
+	  0x9b, 0x78, 0x6d, 0xe5, 0xd3, 0x64, 0x98, 0x35,
+	  0xc8, 0x58, 0xac, 0xb8, 0x08, 0x6d, 0x21, 0x51,
+	  0xcf, 0xe0, 0x76, 0x48, 0x81, 0x6c, 0xed, 0x65,
+	  0x4a, 0x50, 0xb4, 0x06, 0x38, 0x0b, 0x26, 0x74,
+	  0x43, 0xbf, 0xc5, 0x2e, 0x07, 0xa6, 0xb8, 0x0e,
 	};
       
       boot_path = grub_util_get_path (dir, "fwstart.img");
